src/AppBundle/Resources/public/css/app_style.css
/** Prototype 2 CSS */

/*---------------------------------
   Connexion
----------------------------------*/
.btn-facebook {
    background-color: #3b5998;
}

/*---------------------------------
    TOASTR
----------------------------------*/
#toast-container {
    top: 12px;
}

/*---------------------------------
    Global Preloader
    Affiche un preloader dans un coin de la page le temps d'une requête Ajax par exemple
----------------------------------*/
.at-global-preloader {
    position: fixed;
    z-index: 100;
    top: 10px;
    left: 50%;
    width: 40px;
    margin-left: -20px;
    background-color: rgba(240,240,240,0.5);
    border-radius: 50%;
}

.at-global-preloader .plc-path {
    stroke-width: 4;
}

/*---------------------------------
    Avertisseur Ajax requis sur le site
----------------------------------*/
.at-alert-no-js {
    position: absolute;
    z-index: 100;
    top: 0;
    left: 0;
    right: 0;
}

.at-alert-no-js:hover {
    opacity: 0.25;
}

/*---------------------------------
    Carousel
----------------------------------*/
.carousel .item {
    height: 500px;
    background-color: #777;
}

/*-----------------------------------
    Fix Card style
-----------------------------------*/

.card.c-dark .card-header > .media > .media-body > h2 {
    color: #fff;
}

.card.c-dark .card-header > .media > .media-body > h2 small {
    color: rgba(255, 255, 255, 0.7);
}

.card-body + .card-body {
    padding-top: 0 !important;
}

.card-body + .card-footer {
    padding-top: 0 !important;
}

.card-footer.card-padding {
    padding: 30px 33px;
}

.card-footer.card-padding-sm {
    padding: 15px;
}

/*-----------------------------------
    FIX checkbox-inline, radio-inline
-----------------------------------*/
/* Les classes ne sont pas utilisées dans le bon ordre sinon (pourquoi?) */
.checkbox-inline,
.radio-inline {
    vertical-align: top;
    margin-top: 0 !important;
    padding-left: 25px;
}

/*-----------------------------------
    FIX Google Place autocomplete result are under modal
-----------------------------------*/
.pac-container {
    z-index: 1050;
}

/*-----------------------------------

-----------------------------------*/
.list-md-icon ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.list-md-icon ul li {
    position: relative;
    padding: 8px 0 8px 35px;
}

.list-md-icon ul li i {
    font-size: 18px;
    vertical-align: top;
    line-height: 100%;
    position: absolute;
    left: 0;
    width: 18px;
    text-align: center;
}

/*-----------------------------------
    Avatar (Adapt Material Design Extebded Admin
------------------------------------*/
.avatar-img,
.avatar-char,
.yzi-avatar-img {
    border-radius: 10%;
}

/*-----------------------------------
    Affichage d'avatar utilisateur
-----------------------------------*/
.avatar-container-list {
    float: left;
}

.avatar-container-list-xs {
    float: left;
    height: 20px;
    width: 100%;
    display: inline-block;
    overflow: hidden;
}

.avatar-container-list .avatar-img-container,
.avatar-container-list .avatar-img-container-xs,
.avatar-container-list .avatar-img-container-sm,
.avatar-container-list .avatar-img-container-md {
    float: left;
}

.avatar-img-container,
.avatar-img-container-xs,
.avatar-img-container-sm,
.avatar-img-container-md {
    position: relative;
    text-align: center;
    width: 50px;
    height: 50px;
}

.avatar-img-container-xs {
    width: 20px;
    height: 20px;
}

.avatar-img-container-sm {
    width: 35px;
    height: 35px;
}

.avatar-img-container-md {
    width: 100px;
    height: 100px;
}

.avatar-img-container img,
.avatar-img-container-xs img,
.avatar-img-container-sm img,
.avatar-img-container-md img {
    object-fit: cover;
    position: relative;
    width: 100%;
    height: 100%;
}

.avatar-img-container-xs img {
    position: relative;
    width: 20px;
    height: 20px;
}

.avatar-img-container-sm img {
    position: relative;
    width: 35px;
    height: 35px;
}

.avatar-img-container img {
    position: relative;
    width: 50px;
    height: 50px;
}

/*----------------------------------
    Event Picture
-----------------------------------*/

#event_picture_update_modal .kv-avatar .file-preview-frame, .kv-avatar .file-preview-frame:hover {
    margin: 0;
    padding: 0;
    border: none;
    box-shadow: none;
    text-align: center;
}

#event_picture_update_modal .kv-avatar .file-input {
    display: block;
    width: 95%;
    min-height: 150px;
    margin: 0 auto;
}

.event-title {
    text-shadow: 0 0 20px rgb(0, 0, 0);
}

h1.event-title {
    position: absolute;
    bottom: 0;
}

/*----------------------------------
    Event Invitation Answer
-----------------------------------*/

.answer-form .btn-answer-false {
    background-color: #ffccbc;
}

.answer-form .btn-answer-false.active,
.answer-form .btn-answer-false:active {
    background-color: #ff5722;
    font-weight: bold;
}

.answer-form .btn-answer-maybe {
    background-color: #b3e5fc;
}

.answer-form .btn-answer-maybe.active,
.answer-form .btn-answer-maybe:active {
    background-color: #03a9f4;
    font-weight: bold;
}

.answer-form .btn-answer-true {
    background-color: #b2dfdb;
}

.answer-form .btn-answer-true.active,
.answer-form .btn-answer-true:active {
    background-color: teal;
    font-weight: bold;
}

.answer-thumb {
    display: inline-block;
    margin-bottom: 0;
    text-align: center;
    vertical-align: middle;
    white-space: nowrap;
    padding: 6px 10px;
    font-size: 12px;
    line-height: 1.42857143;
    border-radius: 2px;
}

/*----------------------------------
    Event Invitations
-----------------------------------*/

.userInvitation-avatar {
    position: relative;
}

.cancelInvitation {
    position: absolute;
    bottom: 0;
    right: 3px;
    border-radius: 2px;
    color: #FFF;
}
/* ... */

